show new colors and centering of the divs

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -3,15 +3,17 @@ $green: #8AA399;
 $black: #000;
 $white: #fff;
 $lightpurple: #8FA6CB;
+$gray: #8B8C89;
+$lightblue: #6096BA;
 
 body {
   width: 100%;
-  background-color: $green;
+  background-color: $lightblue;
 }
 
-/*header {
-  background-color: $lightpurple;
-}*/
+div {
+  margin-left: 35%;
+}
 
 h1 {
   color: $white;
